--- a/package.json
+++ b/package.json
@@ -13,22 +13,27 @@
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.0.0",
     "@react-native-firebase/firestore": "^21.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "calendarapp": "file:",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
     "link": "^2.1.1",
     "react": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "typescript": "^5.1.3"
   },
   "private": true
