--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "calendarapp": "file:",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~51.0.28",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
     "link": "^2.1.1",
     "react": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-image-picker": "^7.1.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
