--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.0.0",
     "@react-native-firebase/firestore": "^21.0.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "calendarapp": "file:",
+    "date-fns": "^4.1.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~51.0.28",
     "expo-image-picker": "~15.0.7",
@@ -26,6 +28,7 @@
     "link": "^2.1.1",
     "react": "18.2.0",
     "react-native": "^0.74.5",
+    "react-native-calendars": "^1.1307.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.11.1",
