--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.0.0",
     "@react-native-firebase/firestore": "^21.0.0",
@@ -21,18 +21,19 @@
     "calendarapp": "file:",
     "date-fns": "^4.1.0",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "~51.0.28",
-    "expo-image-picker": "~15.0.7",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.7",
+    "expo-image-picker": "~16.0.2",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.1",
     "link": "^2.1.1",
-    "react": "18.2.0",
-    "react-native": "^0.74.5",
+    "react": "^18.3.1",
+    "react-native": "^0.76.2",
     "react-native-calendars": "^1.1307.0",
+    "react-native-gesture-handler": "^2.21.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
