--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.0.0",
     "@react-native-firebase/firestore": "^21.0.0",
@@ -29,16 +29,16 @@
     "react": "^18.3.1",
     "react-native": "^0.76.2",
     "react-native-calendars": "^1.1307.0",
-    "react-native-gesture-handler": "^2.21.0",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
     "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "^18.2.79",
     "@types/react-native-snap-carousel": "^3.8.11",
     "typescript": "^5.1.3"
   },
