--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/firestore": "^21.0.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^7.0.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
@@ -23,6 +24,7 @@
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^52.0.7",
     "expo-image-picker": "~16.0.2",
+    "expo-router": "^4.0.9",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.1",
     "link": "^2.1.1",
@@ -30,7 +32,9 @@
     "react-native": "^0.76.2",
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-reanimated": "^3.16.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
