--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.0.0",
     "@react-native-firebase/firestore": "^21.0.0",
     "@react-native-picker/picker": "^2.9.0",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/drawer": "^7.0.11",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/bottom-tabs": "^7.0.12",
+    "@react-navigation/drawer": "^7.0.12",
+    "@react-navigation/elements": "^2.1.6",
+    "@react-navigation/native": "^7.0.7",
+    "@react-navigation/native-stack": "^7.1.8",
     "@react-navigation/stack": "^6.4.1",
     "calendarapp": "file:",
     "date-fns": "^4.1.0",
@@ -37,7 +39,7 @@
     "react-native-reanimated": "^3.16.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "^4.3.0",
     "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
