--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-resizer": "^1.4.5",
+    "react-native-maps": "^1.20.1",
+    "react-native-open-maps": "^0.4.3",
     "react-native-reanimated": "^3.16.2",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
