--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@expo/webpack-config": "^19.0.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.0.0",
@@ -24,27 +25,29 @@
     "calendarapp": "file:",
     "date-fns": "^4.1.0",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "expo": "^52.0.7",
+    "expo": "~52.0.17",
     "expo-image-picker": "~16.0.2",
-    "expo-router": "^4.0.9",
+    "expo-router": "~4.0.11",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.1",
     "link": "^2.1.1",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "^0.76.2",
     "react-native-calendars": "^1.1307.0",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-resizer": "^1.4.5",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "^1.18.0",
     "react-native-open-maps": "^0.4.3",
     "react-native-reanimated": "^3.16.2",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.14.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.3.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
